--- a/index.html
+++ b/index.html
@@ -106,10 +106,15 @@
                 <h2 class="h2">Чем мы занимаемся</h2>
 
                 <ul class="work-foto">
-                    <li class="foto"><img src="./images/work1.jpg" width="370" alt="Чёт печатает"></li>
-                    <li class="foto"><img src="./images/work2.jpg" width="370" alt="Выбираем фон для смартфона">
+                    <li class="foto"><img src="./images/work1.jpg" width="370" alt="Чёт печатает">
+                        <div class="p-hero">Десктопные приложения</div>
                     </li>
-                    <li class="foto"><img src="./images/work3.jpg" width="370" alt="Выбирает цвет карандаша"></li>
+                    <li class="foto"><img src="./images/work2.jpg" width="370" alt="Выбираем фон для смартфона">
+                        <div class="p-hero">Мобильные приложения</div>
+                    </li>
+                    <li class="foto"><img src="./images/work3.jpg" width="370" alt="Выбирает цвет карандаша">
+                        <div class="p-hero">Дизайнерские решения</div>
+                    </li>
                 </ul>
             </div>
         </section>
