--- a/pages/portfolio.html
+++ b/pages/portfolio.html
@@ -58,26 +58,46 @@
                     <li class="services-item">
                         <a href="" class="portfolio-link">
 
-                            <img src="../images/portfolio/img.jpg" width="370" alt="">
+                            <div class="position"><img src="../images/portfolio/img.jpg" width="370" alt="">
+                                <p class="p-block">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="services-hp">
                                 <h3 class="works">Технокряк</h3>
                                 <p class="works-p">Веб-сайт</p>
                             </div>
+
                         </a>
                     </li>
 
                     <li class="services-item">
                         <a href="" class="portfolio-link">
-                            <img src="../images/portfolio/img-1.jpg" width="370" alt="">
+                            <div class="position">
+                                <img src="../images/portfolio/img-1.jpg" width="370" alt="">
+                                <p class="p-block">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="services-hp">
                                 <h3 class="works">Постер New Orlean vs Golden Star</h3>
                                 <p class="works-p">Дизайн</p>
                             </div>
+
+
+
                         </a>
                     </li>
                     <li class="services-item">
                         <a href="" class="portfolio-link">
-                            <img src="../images/portfolio/img-2.jpg" width="370" alt="">
+                            <div class="position"><img src="../images/portfolio/img-2.jpg" width="370" alt="">
+                                <p class="p-block">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="services-hp">
                                 <h3 class="works">Ресторан Seafood</h3>
                                 <p class="works-p">Приложение</p>
@@ -86,7 +106,12 @@
                     </li>
                     <li class="services-item">
                         <a href="" class="portfolio-link">
-                            <img src="../images/portfolio/img-3.jpg" width="370" alt="">
+                            <div class="position"><img src="../images/portfolio/img-3.jpg" width="370" alt="">
+                                <p class="p-block">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="services-hp">
                                 <h3 class="works">Проект Prime</h3>
                                 <p class="works-p">Маркетинг</p>
@@ -95,7 +120,12 @@
                     </li>
                     <li class="services-item">
                         <a href="" class="portfolio-link">
-                            <img src="../images/portfolio/img-4.jpg" width="370" alt="">
+                            <div class="position"><img src="../images/portfolio/img-4.jpg" width="370" alt="">
+                                <p class="p-block">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="services-hp">
                                 <h3 class="works">Проект Boxes</h3>
                                 <p class="works-p">Приложение</p>
@@ -104,7 +134,12 @@
                     </li>
                     <li class="services-item">
                         <a href="" class="portfolio-link">
-                            <img src="../images/portfolio/img-5.jpg" width="370" alt="">
+                            <div class="position"><img src="../images/portfolio/img-5.jpg" width="370" alt="">
+                                <p class="p-block">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="services-hp">
                                 <h3 class="works">Inspiration has no Borders</h3>
                                 <p class="works-p">Веб-сайт</p>
@@ -113,7 +148,12 @@
                     </li>
                     <li class="services-item">
                         <a href="" class="portfolio-link">
-                            <img src="../images/portfolio/img-6.jpg" width="370" alt="">
+                            <div class="position"><img src="../images/portfolio/img-6.jpg" width="370" alt="">
+                                <p class="p-block">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="services-hp">
                                 <h3 class="works">Издание Limited Edition</h3>
                                 <p class="works-p">Дизайн</p>
@@ -122,7 +162,12 @@
                     </li>
                     <li class="services-item">
                         <a href="" class="portfolio-link">
-                            <img src="../images/portfolio/img-7.jpg" width="370" alt="">
+                            <div class="position"><img src="../images/portfolio/img-7.jpg" width="370" alt="">
+                                <p class="p-block">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="services-hp">
                                 <h3 class="works">Проект LAB</h3>
                                 <p class="works-p">Маркетинг</p>
@@ -131,7 +176,12 @@
                     </li>
                     <li class="services-item">
                         <a href="" class="portfolio-link">
-                            <img src="../images/portfolio/img-8.jpg" width="370" alt="">
+                            <div class="position"><img src="../images/portfolio/img-8.jpg" width="370" alt="">
+                                <p class="p-block">Технокряк это современная площадка распространения коронавируса.
+                                    Компании
+                                    используют эту платформу для цифрового
+                                    шпионажа и атак на защищённые сервера конкурентов.</p>
+                            </div>
                             <div class="services-hp">
                                 <h3 class="works">Growing Business</h3>
                                 <p class="works-p">Приложение</p>
